Home UI done, falta so adicionar umas cenas